...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DrawingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawing_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bar_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_drawing_button"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroupDrawTypeSelection"
            android:orientation="horizontal"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
...
                android:layout_height="50dp"
                android:background="@drawable/draw_type_stroke_selector"
                />

            <RadioButton
                android:button="@null"
                android:id="@+id/radioButtonFillDraw"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/draw_type_fill_selector"
                />

            <RadioButton
...
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonThinnestStroke"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:button="@drawable/stroke_thickness_selector_3"

                android:buttonTint="#00000000"
                android:buttonTintMode="add" />

            <RadioButton
                android:id="@+id/radioButtonThinStroke"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:button="@drawable/stroke_thickness_selector_6"
                android:buttonTint="#00000000"
                android:buttonTintMode="add" />

            <RadioButton
                android:id="@+id/radioButtonMediumStroke"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:button="@drawable/stroke_thickness_selector_9"
                android:buttonTint="#00000000"
                android:buttonTintMode="add" />

            <RadioButton
                android:id="@+id/radioButtonThickStroke"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:button="@drawable/stroke_thickness_selector_12"
                android:buttonTint="#00000000"
                android:buttonTintMode="add" />

            <RadioButton
                android:id="@+id/radioButtonThickestStroke"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:button="@drawable/stroke_thickness_selector_15"
                android:buttonTint="#00000000"
                android:buttonTintMode="add" />
        </RadioGroup>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.nmadrawingapp.view.components.CanvasView
        android:id="@+id/canvas"
        android:layout_width="1228dp"
        android:layout_height="716dp"

        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawing_header"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroupColorSelector"
        android:layout_width="50dp"
        android:layout_height="600dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawing_header">

        <RadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/color_selector"
            app:buttonTint="@color/red" />

        <RadioButton
...
