<resources>
    <string name="app_name">NMA Drawing App</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="save_drawing">Save Your Drawing</string>
    <string name="enter_valid_age">Please enter a valid age (1 to 130)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_drawings">Delete selected drawings</string>
    <string name="upload">Upload</string>
    <string name="start">Start</string>
    <string name="set_up_an_event">Set up an event</string>
    <string name="event_code">Event code</string>
    <string name="upload_drawings">Upload Drawings</string>
    <string name="drawings_to_upload">Drawings to upload: %1d</string>
    <string name="drawings_selected">%1d of %2d drawings selected</string>
    <string name="event">Event</string>
    <string name="event_id">%1d</string>
    <string name="event_code_input_can_t_be_empty">Event code input can\'t be empty</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_valid_name">Name field cannot be empty or contain numbers</string>
    <string name="upload_error">Upload Error</string>
    <string name="upload_failed_message">Upload failed. An event with this ID does not exist. Please change it and try again.</string>
    <string name="network_error">Network Error</string>
    <string name="confirm_action">Confirm Action</string>
    <string name="confirm_delete">Are you sure you want to delete selected drawings?</string>
    <string name="delete">Delete</string>
    <string name="change_id">Change ID</string>
    <string name="change_event_id">Change Event ID</string>
    <string name="new_id">New ID</string>
    <string name="enter_new_event_id">Enter new event ID</string>
    <string name="change">Change</string>
    <string name="id_error">ID field cannot be empty</string>
</resources>