...
            android:text="@string/set_up_an_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_input_label"
            android:labelFor="@+id/event_input"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/event_code"
            app:layout_constraintStart_toStartOf="@+id/event_heading"
            app:layout_constraintTop_toBottomOf="@+id/event_heading" />


        <TextView
            android:id="@+id/start_error_message"
            style="@style/ErrorText"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:labelFor="@+id/event_input"
...
            style="@style/EditText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/start_button"
            app:layout_constraintStart_toStartOf="@+id/event_input_label"
            app:layout_constraintTop_toBottomOf="@+id/event_input_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_button"
            style="@style/PrimaryButton"
...
        <TextView
            android:id="@+id/drawings_num_label"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawings_to_upload"
            app:layout_constraintBottom_toBottomOf="@+id/start_upload_button"
            app:layout_constraintStart_toStartOf="@+id/upload_heading"
            app:layout_constraintTop_toTopOf="@+id/start_upload_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_upload_button"
            style="@style/PrimaryButton"
...
